--- a/src/calculate.scss
+++ b/src/calculate.scss
@@ -7,6 +7,18 @@ $button--width: 100px;
 $button--height: 100px;
 $border--color: whitesmoke;
 
+//reset css
+button {
+  background: inherit;
+  border: none;
+  box-shadow: none;
+  border-radius: 0;
+  padding: 0;
+  overflow: visible;
+  cursor: pointer;
+  font-size: 30px;
+}
+
 * {
   box-sizing: border-box;
 }
